2012-01-17  6.7.4-8 Glenn Randers-Pehrson <glennrp@image...>
  * Don't write ancillary chunks in PNG-encoded ICO files.

2011-01-14  6.7.4-7 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.4-7, SVN revision 6471.

2011-01-13  6.7.4-7 Cristy  <quetzlzacatenango@image...>
  * Default to a lighter hinting algorithm for non-monochrome font rendering.

2011-01-12  6.7.4-6 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.4-6, SVN revision 6434.

2011-01-12  6.7.4-6 Cristy  <quetzlzacatenango@image...>
  * Eliminate preprocessor exception for the HDRI build.

2011-01-10  6.7.4-5 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.4-5, SVN revision 6422.

2012-01-02  6.7.4-5 Glenn Randers-Pehrson <glennrp@image...>
  * Fixed -black-threshold and -white-threshold so they work properly with
    the -channels option (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=20096).

2012-01-02  6.7.4-5 Glenn Randers-Pehrson <glennrp@image...>
  * Removed PNG_USE_CLONE cruft from the PNG encoder (see 2011-11-19 entry)
  * Promote image depths 9-15 to 16 to avoid crashing in the PNG
    encoder (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=20098).

2011-01-01  6.7.4-4 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.4-4, SVN revision 6318.

2010-12-30  6.7.4-4 Glenn Randers-Pehrson <glennrp@image...>
  * Fix problems with JNG encoder "quality" (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=20076).

2011-12-30  6.7.4-3 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.4-3, SVN revision 6310.

2011-12-28  6.7.4-3 Cristy  <quetzlzacatenango@image...>
  * Fix memory leak in JP2 coder (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=20071).
  * Use maximum bounds when rendering PDF (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=20078).

2011-12-25  6.7.4-2 Cristy  <quetzlzacatenango@image...>